--- a/bower.json
+++ b/bower.json
@@ -16,5 +16,8 @@
   "devDependencies": {
     "angular-mocks": "1.2.15",
     "angular-scenario": "1.2.15"
+  },
+  "resolutions": {
+    "angular": "1.2.17-build.130+sha.9ab9bf6"
   }
 }
